# markflow

./: .gitignore  AGENTS.md  Backlog.md  Cargo.toml  README.md  ROADMAP.md  RSMD_DESIGN.md  TODO.md  TODO1.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: stream_bench.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  event.rs  html_renderer.rs  lib.rs  markdown_adapter.rs  streaming_rewriter.rs
crates/napi/: .npmignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml
crates/napi/examples/: basic.mjs  with-options.mjs  with-stats.mjs
crates/napi/scripts/: smoke-napi.mjs
crates/napi/src/: lib.rs
crates/napi/tests/: parse.test.js  parseWithOptions.test.js  parseWithStats.test.js
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: GUIDELINES.md  README.md  RSMD_DESIGN.md
docs/architecture/: overview.md
docs/development/: guidelines-ja.md  guidelines.md  spec-driven-codex.md
docs/specs/: mf-101-streaming.md  mf-118-napi-smoke.md  mf-130-wasm.md  mf-140-core-engine.md
examples/node/: render.test.ts  vitest.config.mjs
examples/web/: render.test.ts  vitest.config.mjs
fixtures/markdown/: hello.md
scripts/: check-backlog.mjs  smoke-napi.mjs
