[package]
name = "markflow-core"
description = "Markflow parser + PipeAdapter + streaming rewriter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lol_html = "2.0"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
thiserror = "2.0.17"
