[package]
name = "markflow-core"
description = "Markflow parser + PipeAdapter + streaming rewriter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lol_html = "2.0"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
thiserror = "2.0.17"
markdown = "1.0.0-alpha.16"
log = "0.4"
